# FundAlg_2025_4SEM

./: .gitignore  CCodeStyle.md  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
FirstLabPack/MyUniquePTR/: CMakeLists.txt
FirstLabPack/MyUniquePTR/include/: unique_ptr.hpp
FirstLabPack/MyUniquePTR/tests/: unptrtests.cpp
FirstLabPack/MyVector/: CMakeLists.txt
FirstLabPack/MyVector/include/: container.hpp  deque.hpp  list.hpp  vector.hpp
FirstLabPack/MyVector/tests/: vectortests.cpp
FundAlg/Lab1/: container.h
FundAlg/Lab1/task1/: CMakeLists.txt
FundAlg/Lab1/task1/include/: array.h
FundAlg/Lab1/task1/src/: main.cpp
FundAlg/Lab1/task1/tests/: test_array.cpp
FundAlg_Laba2/Task2/: CMakeLists.txt
Fund_alg/lab1/task4/: CMakeLists.txt
Fund_alg/lab1/task4/include/: deque.hpp  list.hpp  stack.hpp
Fund_alg/lab1/task4/src/: stack.cpp
Fund_alg/lab1/task4/tests/: test_stack.cpp
SecondLabPack/BigInt1/: CMakeLists.txt
SecondLabPack/BigInt2/: CMakeLists.txt
SecondLabPack/BigInt2/include/: bigint.hpp
SecondLabPack/BigInt2/src/: bigint.cpp
SecondLabPack/BigInt2/tests/: test.cpp
SysProg/: CMakeLists.txt
SysProg/Lab1/ex2/: main.c  main.h
SysProg/Lab1/ex3/: main.c
SysProg/Lab1/ex4/: CMakeLists.txt  lose.txt  server.c  server.h  win.txt
SysProg/Lab1/ex4/include/: client.h  server.h
SysProg/Lab1/ex4/src/: client1.c  client2.c  server.c
SysProg/Lab1/ex5/: main.c  main.h
SysProg/Lab1/ex6/: client.c  client.h  server.c  server.h
SysProg/Lab1/ex7/: main.c  main.h
SysProg/Laba2/Task4/: CMakeLists.txt  elevator.cpp  elevator.hpp  elevator_system.cpp  elevator_system.hpp  logger.cpp  logger.hpp  main.cpp
SysProg/lab1/: CMakeLists.txt
SysProg/lab1/task1/: CMakeLists.txt  dialog.c  dialog.h  main.c  main.h  user_list.c  user_list.h
SysProg/lab1/task2/: CMakeLists.txt  a  c  d  main.c  main.h
SysProg/lab1/task3/: CMakeLists.txt  main.c  main.h
SysProg/lab1/task4/: CMakeLists.txt  client.c  client.h  server.c  server.h
SysProg/lab1/task5/: CMakeLists.txt  main.c  main.h
SysProg/lab1/task6/: CMakeLists.txt  client.c  client.h  files  server.c  server.h
SysProg/lab1/task7/: CMakeLists.txt  main.c  main.h
SysProg/lab3/: CMakeLists.txt
SysProg/lab3/client/: CMakeLists.txt
SysProg/lab3/client/include/: Client.hpp
SysProg/lab3/client/src/: Client.cpp  main.cpp
SysProg/lab3/ipc/: CMakeLists.txt
SysProg/lab3/ipc/message_queue/: CMakeLists.txt
SysProg/lab3/ipc/message_queue/include/: MessageQueue.hpp
SysProg/lab3/ipc/message_queue/src/: MessageQueue.cpp
SysProg/lab3/ipc/semaphore/: CMakeLists.txt
SysProg/lab3/ipc/semaphore/include/: Semaphore.hpp
SysProg/lab3/ipc/semaphore/src/: Semaphore.cpp
SysProg/lab3/ipc/shared_memory/: CMakeLists.txt
SysProg/lab3/ipc/shared_memory/include/: SharedMemory.hpp
SysProg/lab3/ipc/shared_memory/src/: SharedMemory.cpp
SysProg/lab3/server/: CMakeLists.txt
SysProg/lab3/server/include/: Server.hpp
SysProg/lab3/server/src/: Server.cpp  main.cpp
SysProg/lab3/subprocesses/: CMakeLists.txt
SysProg/lab3/subprocesses/compiler/: CMakeLists.txt
SysProg/lab3/subprocesses/compiler/include/: CompilerWorker.hpp
SysProg/lab3/subprocesses/compiler/src/: CompilerWorker.cpp  main.cpp
SysProg/lab3/subprocesses/sticks_game/: CMakeLists.txt
SysProg/lab3/subprocesses/sticks_game/include/: GameWorker.hpp
SysProg/lab3/subprocesses/sticks_game/src/: GameWorker.cpp  main.cpp
SysProg/lab3/utils/: CMakeLists.txt
SysProg/lab3/utils/exceptions/: CMakeLists.txt
SysProg/lab3/utils/exceptions/include/: Exceptions.hpp
SysProg/lab3/utils/logger/: CMakeLists.txt
SysProg/lab3/utils/logger/include/: Logger.h
SysProg/lab3/utils/logger/src/: Logger.cpp
SysProg/lab3/utils/tcp/: CMakeLists.txt
SysProg/lab3/utils/tcp/client/: CMakeLists.txt
SysProg/lab3/utils/tcp/client/include/: TCPClient.hpp
SysProg/lab3/utils/tcp/client/src/: TCPClient.cpp
SysProg/lab3/utils/tcp/server/: CMakeLists.txt
SysProg/lab3/utils/tcp/server/include/: TCPServer.hpp
SysProg/lab3/utils/tcp/server/src/: TCPServer.cpp
SysProg/lab3/utils/tcp/utils/: CMakeLists.txt
SysProg/lab3/utils/tcp/utils/include/: TCPCommon.hpp
SysProg/lab3/utils/tcp/utils/src/: TCPCommon.cpp
SysProg/lab3/utils/thread_safe_queue/: CMakeLists.txt
SysProg/lab3/utils/thread_safe_queue/include/: ThreadSafeQueue.h
SysProg/lab3/utils/thread_safe_queue/src/: ThreadSafeQueue.cpp
SysProg/utility/: error_handler.c  error_handler.h  strops.c  strops.h
SysProg/utility/arrays/: array.c  array.h  intarray.c  intarray.h
SysProg_Laba2_Task2/: LogAnalyzer.cpp  LogAnalyzer.h  LogGenerator.cpp  LogGenerator.h  ThreadSafeQueue.h  Traffic.cpp  Traffic.h  main.cpp
SystemProg/lab2/ex1/: CMakeLists.txt
SystemProg/lab2/ex1/include/: logger.hpp
SystemProg/lab2/ex1/src/: logger.cpp
SystemProg/lab2/ex1/tests/: test_logger.cpp
examples/C/: callbacks.c  goto.c
examples/CPP/: auto_type.cpp  bigint.cpp  collections.cpp  encapsulation_and_operators_overload.cpp  exceptions.cpp  inheritance_and_polymorphism.cpp  namespaces.cpp  overloads.cpp  pure_virtual_classes.cpp  templates.cpp
examples/SysProg/: logger.cpp  password_crypt.c  threads_and_directories.c
examples/building/: CMakeLitst.txt  CMakeLitsts.txt
fund_alghs/: .gitignore
fund_algs/lab1/ex1/: CMakeLists.txt
fund_algs/lab1/ex1/include/: array.hpp  container.hpp
fund_algs/lab1/ex1/src/: array.cpp  container.cpp
fund_algs/lab1/ex1/tests/: tests.cpp
lab1_f/ex5/: CMakeLists.txt
lab1_f/ex6/: CMakeLists.txt
sys_prog/: CMakeLists.txt
sys_prog/lab1/: CMakeLists.txt
sys_proga/ex2/: CMakeLists.txt  main.c
sys_proga/ex3/: main.c
sys_proga/ex4/: client.c  messages.h
sys_proga/ex6/: errors.h  server_utility.c
tasks/: lab_1.md
tasks/FundAlg/: lab_1.md  lab_2.md  lab_3.md
tasks/sys_lab2_2/: CMakeLists.txt
tasks/sys_lab2_2/include/: logger.h  logs_analyzer.h  logs_generator.h  safe_queue.h  traffic.h
tasks/sys_lab2_2/src/: logger.cpp  logs_analyzer.cpp  logs_generator.cpp  safe_queue.cpp  traffic.cpp
tasks/sys_lab2_2/tests/: main.cpp
(+479 files in other folders)
